tests/NormalTests/paczka1/small_fuzzy/72287495.err
Error in line 3: ygxjPy A210 64,5
Error in line 6: 8Mzx5hZ A210 84,4
Error in line 5: ygxjPy A956 39,6
Error in line 14: XRFDg1ySlI7 A364 51,5
